# shopware-api-client

./: .coveragerc.toml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  pytest.xml  renovate.json  ty.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  initialize.sh  post-start.sh
.devcontainer/scripts/: initialize.sh  post-create.sh  post-start.sh
.github/: dependabot.yml
.github/workflows/: cd-python-lib.yml  ci-python-lib.yml  continuous_delivery.yml  continuous_integration.yml  renovate-bot.yml
src/shopware_api_client/: auth.py  base.py  cache.py  client.py  config.py  exceptions.py  fieldsets.py  logging.py
src/shopware_api_client/endpoints/: base_fields.py  relations.py
src/shopware_api_client/endpoints/admin/: __init__.py
src/shopware_api_client/endpoints/admin/commercial/: b2b_components_role.py  b2b_components_shopping_list.py  b2b_components_shopping_list_line_item.py  b2b_employee.py  dynamic_access.py
src/shopware_api_client/endpoints/admin/core/: acl_role.py  api_info.py  app.py  app_script_condition.py  category.py  cms_block.py  cms_page.py  cms_section.py  cms_slot.py  country.py  country_state.py  currency.py  currency_country_rounding.py  custom_entity.py  custom_field.py  customer.py  customer_address.py  customer_group.py  customer_recovery.py  customer_wishlist.py  customer_wishlist_product.py  delivery_time.py  document.py  document_base_config.py  document_base_config_sales_channel.py  document_type.py  integration.py  landing_page.py  language.py  locale.py  main_category.py  media.py  media_default_folder.py  media_folder.py  media_folder_configuration.py  media_thumbnail.py  media_thumbnail_size.py  order.py  order_address.py  order_customer.py  (+52 more)
src/shopware_api_client/endpoints/store/: __init__.py
src/shopware_api_client/endpoints/store/core/: address.py  cart.py  category.py  cms_block.py  cms_page.py  cms_section.py  cms_slot.py  context.py  country.py  country_state.py  currency.py  customer.py  customer_group.py  delivery_time.py  document.py  document_type.py  landing_page.py  language.py  locale.py  main_category.py  media.py  media_thumbnail.py  order.py  order_address.py  order_customer.py  order_delivery.py  order_delivery_position.py  order_line_item.py  order_transaction.py  order_transaction_capture.py  order_transaction_capture_refund.py  order_transaction_capture_refund_position.py  payment_method.py  product.py  product_configurator_setting.py  product_cross_selling.py  product_download.py  product_manufacturer.py  product_media.py  product_review.py  (+14 more)
src/shopware_api_client/models/: acl_role.py  app.py  app_script_condition.py  b2b_components_role.py  b2b_components_shopping_list.py  b2b_components_shopping_list_line_item.py  b2b_employee.py  category.py  cms_block.py  cms_page.py  cms_section.py  cms_slot.py  country.py  country_state.py  currency.py  currency_country_rounding.py  custom_entity.py  custom_field.py  customer.py  customer_address.py  customer_group.py  customer_recovery.py  customer_wishlist.py  customer_wishlist_product.py  delivery_time.py  document.py  document_base_config.py  document_base_config_sales_channel.py  document_type.py  dynamic_access.py  integration.py  landing_page.py  language.py  locale.py  main_category.py  media.py  media_default_folder.py  media_folder.py  media_folder_configuration.py  media_thumbnail.py  (+55 more)
src/shopware_api_client/structs/: absolute_price_definition.py  calculated_cheapest_price.py  calculated_price.py  calculated_tax.py  cart.py  cart_price.py  cash_rounding_config.py  context.py  delivery.py  delivery_date.py  delivery_information.py  delivery_position.py  delivery_time.py  language_info.py  line_item.py  list_price.py  measurement_units.py  percentage_price_definition.py  price.py  quantity_information.py  quantity_price_definition.py  reference_price.py  reference_price_definition.py  regulation_price.py  sales_channel_context.py  shipping_location.py  tax_free_config.py  tax_rule.py  transaction.py  variant_listing_config.py
tests/: conftest.py  test_auth.py  test_base_fields.py  test_cache.py  test_client.py  test_config.py  test_endpoint_search_mixin.py  test_exceptions.py  test_registry.py  test_thumbnail.py
