[tool.poetry]
name = "shopware-api-client"
description = " An api client for the Shopware API"
version = "1.0.23"
license = "MIT"
authors = ["GWS Gesellschaft für Warenwirtschafts-Systeme mbH <ebusiness@gws.ms>"]
readme = "README.md"
homepage = "https://github.com/GWS-mbH"
repository = "https://github.com/GWS-mbH/shopware-api-client"
documentation = "https://github.com/GWS-mbH/shopware-api-client/wiki"
keywords = ["shopware", "api", "client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
Changelog = "https://github.com/GWS-mbH/shopware-api-client"
Bugtracker = "https://github.com/GWS-mbH/shopware-api-client/issues"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.26"
httpx-auth = "^0.21"
pydantic = "^2.6"
pytest-random-order = "^1.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.2"
coverage = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = ">=0.2,<0.4"
pytest-asyncio = "^0.23.3"
pytest-recording = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_mode = "auto"
addopts = [
    "--rootdir=./test",
    "--cov-branch",
    "--cov=src",
    "--cov-report=xml",
    "--import-mode=importlib",
    "--random-order",
]
