[project]
name = "shopware-api-client"
description = " An api client for the Shopware API"
version = "2.0.0"
license = "MIT"
authors = [
    { name = "GWS Gesellschaft für Warenwirtschafts-Systeme mbH", email = "ebusiness@gws.ms" }
]
maintainers = [
    { name = "GWS Gesellschaft für Warenwirtschafts-Systeme mbH", email = "ebusiness@gws.ms" }
]
readme = "README.md"
keywords = ["shopware", "api", "client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "httpx2>=2.4.0",
    "pydantic>=2.13.4",
]

[project.urls]
homepage = "https://github.com/GWS-mbH"
repository = "https://github.com/GWS-mbH/shopware-api-client"
documentation = "https://github.com/GWS-mbH/shopware-api-client/wiki"
changelog = "https://github.com/GWS-mbH/shopware-api-client/releases"
issues = "https://github.com/GWS-mbH/shopware-api-client/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.5.8",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-github-actions-annotate-failures>=0.4.0",
    "pytest-mock>=3.15.1",
    "pytest-random-order>=1.2.0",
    "pytest-recording>=0.13.4",
    "ruff>=0.15.17",
    "ty>=0.0.44",
]

[tool.uv]
exclude-newer = "P7D"
